src/Blamite/Blam/Scripting/ANTLR/HS_Gen1Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:\Dev\Antlr\HS_Gen1.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
public partial class HS_Gen1Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, BOOLEAN=5, NONE=6, SCRIPT=7, VALUETYPE=8, 
		SCRIPTTYPE=9, STRING=10, FLOAT=11, INT=12, LP=13, RP=14, ID=15, WS=16, 
		BLOCKCOMMENT=17, COMMENT=18;
	public const int
		RULE_hsc = 0, RULE_globalDeclaration = 1, RULE_scriptDeclaration = 2, 
		RULE_scriptParameters = 3, RULE_cond = 4, RULE_branch = 5, RULE_call = 6, 
		RULE_condGroup = 7, RULE_parameter = 8, RULE_scriptID = 9, RULE_callID = 10, 
		RULE_expression = 11, RULE_literal = 12;
	public static readonly string[] ruleNames = {
		"hsc", "globalDeclaration", "scriptDeclaration", "scriptParameters", "cond", 
		"branch", "call", "condGroup", "parameter", "scriptID", "callID", "expression", 
		"literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'global'", "','", "'cond'", "'branch'", null, null, "'script'", 
		null, null, null, null, null, "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "BOOLEAN", "NONE", "SCRIPT", "VALUETYPE", 
		"SCRIPTTYPE", "STRING", "FLOAT", "INT", "LP", "RP", "ID", "WS", "BLOCKCOMMENT", 
		"COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HS_Gen1.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static HS_Gen1Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HS_Gen1Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HS_Gen1Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class HscContext : ParserRuleContext {
		public GlobalDeclarationContext[] globalDeclaration() {
			return GetRuleContexts<GlobalDeclarationContext>();
		}
		public GlobalDeclarationContext globalDeclaration(int i) {
			return GetRuleContext<GlobalDeclarationContext>(i);
		}
		public ScriptDeclarationContext[] scriptDeclaration() {
			return GetRuleContexts<ScriptDeclarationContext>();
		}
		public ScriptDeclarationContext scriptDeclaration(int i) {
			return GetRuleContext<ScriptDeclarationContext>(i);
		}
		public HscContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hsc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterHsc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitHsc(this);
		}
	}

	[RuleVersion(0)]
	public HscContext hsc() {
		HscContext _localctx = new HscContext(Context, State);
		EnterRule(_localctx, 0, RULE_hsc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LP) {
				{
				State = 28;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 26; globalDeclaration();
					}
					break;
				case 2:
					{
					State = 27; scriptDeclaration();
					}
					break;
				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalDeclarationContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public ITerminalNode VALUETYPE() { return GetToken(HS_Gen1Parser.VALUETYPE, 0); }
		public ITerminalNode ID() { return GetToken(HS_Gen1Parser.ID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public GlobalDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterGlobalDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitGlobalDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public GlobalDeclarationContext globalDeclaration() {
		GlobalDeclarationContext _localctx = new GlobalDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_globalDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33; Match(LP);
			State = 34; Match(T__0);
			State = 35; Match(VALUETYPE);
			State = 36; Match(ID);
			State = 37; expression();
			State = 38; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScriptDeclarationContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public ITerminalNode SCRIPT() { return GetToken(HS_Gen1Parser.SCRIPT, 0); }
		public ITerminalNode SCRIPTTYPE() { return GetToken(HS_Gen1Parser.SCRIPTTYPE, 0); }
		public ITerminalNode VALUETYPE() { return GetToken(HS_Gen1Parser.VALUETYPE, 0); }
		public ScriptIDContext scriptID() {
			return GetRuleContext<ScriptIDContext>(0);
		}
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public ScriptParametersContext scriptParameters() {
			return GetRuleContext<ScriptParametersContext>(0);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ScriptDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterScriptDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitScriptDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public ScriptDeclarationContext scriptDeclaration() {
		ScriptDeclarationContext _localctx = new ScriptDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_scriptDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(LP);
			State = 41; Match(SCRIPT);
			State = 42; Match(SCRIPTTYPE);
			State = 43; Match(VALUETYPE);
			State = 44; scriptID();
			State = 46;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 45; scriptParameters();
				}
				break;
			}
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 48; expression();
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << NONE) | (1L << VALUETYPE) | (1L << STRING) | (1L << FLOAT) | (1L << INT) | (1L << LP) | (1L << ID))) != 0) );
			State = 53; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScriptParametersContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public ScriptParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptParameters; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterScriptParameters(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitScriptParameters(this);
		}
	}

	[RuleVersion(0)]
	public ScriptParametersContext scriptParameters() {
		ScriptParametersContext _localctx = new ScriptParametersContext(Context, State);
		EnterRule(_localctx, 6, RULE_scriptParameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55; Match(LP);
			State = 56; parameter();
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 57; Match(T__1);
				State = 58; parameter();
				}
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 64; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CondContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public CondGroupContext[] condGroup() {
			return GetRuleContexts<CondGroupContext>();
		}
		public CondGroupContext condGroup(int i) {
			return GetRuleContext<CondGroupContext>(i);
		}
		public CondContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterCond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitCond(this);
		}
	}

	[RuleVersion(0)]
	public CondContext cond() {
		CondContext _localctx = new CondContext(Context, State);
		EnterRule(_localctx, 8, RULE_cond);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; Match(LP);
			State = 67; Match(T__2);
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 68; condGroup();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==LP );
			State = 73; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BranchContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public BranchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_branch; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterBranch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitBranch(this);
		}
	}

	[RuleVersion(0)]
	public BranchContext branch() {
		BranchContext _localctx = new BranchContext(Context, State);
		EnterRule(_localctx, 10, RULE_branch);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(LP);
			State = 76; Match(T__3);
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << NONE) | (1L << VALUETYPE) | (1L << STRING) | (1L << FLOAT) | (1L << INT) | (1L << LP) | (1L << ID))) != 0)) {
				{
				{
				State = 77; expression();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CallContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public CallIDContext callID() {
			return GetRuleContext<CallIDContext>(0);
		}
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public CallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_call; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitCall(this);
		}
	}

	[RuleVersion(0)]
	public CallContext call() {
		CallContext _localctx = new CallContext(Context, State);
		EnterRule(_localctx, 12, RULE_call);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(LP);
			State = 86; callID();
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << NONE) | (1L << VALUETYPE) | (1L << STRING) | (1L << FLOAT) | (1L << INT) | (1L << LP) | (1L << ID))) != 0)) {
				{
				{
				State = 87; expression();
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 93; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CondGroupContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(HS_Gen1Parser.LP, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode RP() { return GetToken(HS_Gen1Parser.RP, 0); }
		public CondGroupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condGroup; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterCondGroup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitCondGroup(this);
		}
	}

	[RuleVersion(0)]
	public CondGroupContext condGroup() {
		CondGroupContext _localctx = new CondGroupContext(Context, State);
		EnterRule(_localctx, 14, RULE_condGroup);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(LP);
			State = 96; expression();
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 97; expression();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << NONE) | (1L << VALUETYPE) | (1L << STRING) | (1L << FLOAT) | (1L << INT) | (1L << LP) | (1L << ID))) != 0) );
			State = 102; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(HS_Gen1Parser.ID, 0); }
		public ITerminalNode SCRIPT() { return GetToken(HS_Gen1Parser.SCRIPT, 0); }
		public ITerminalNode VALUETYPE() { return GetToken(HS_Gen1Parser.VALUETYPE, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitParameter(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(Context, State);
		EnterRule(_localctx, 16, RULE_parameter);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			_la = TokenStream.LA(1);
			if ( !(_la==SCRIPT || _la==VALUETYPE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 105; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScriptIDContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(HS_Gen1Parser.ID, 0); }
		public ITerminalNode INT() { return GetToken(HS_Gen1Parser.INT, 0); }
		public ScriptIDContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptID; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterScriptID(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitScriptID(this);
		}
	}

	[RuleVersion(0)]
	public ScriptIDContext scriptID() {
		ScriptIDContext _localctx = new ScriptIDContext(Context, State);
		EnterRule(_localctx, 18, RULE_scriptID);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			_la = TokenStream.LA(1);
			if ( !(_la==INT || _la==ID) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CallIDContext : ParserRuleContext {
		public ScriptIDContext scriptID() {
			return GetRuleContext<ScriptIDContext>(0);
		}
		public ITerminalNode VALUETYPE() { return GetToken(HS_Gen1Parser.VALUETYPE, 0); }
		public CallIDContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_callID; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterCallID(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitCallID(this);
		}
	}

	[RuleVersion(0)]
	public CallIDContext callID() {
		CallIDContext _localctx = new CallIDContext(Context, State);
		EnterRule(_localctx, 20, RULE_callID);
		try {
			State = 111;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109; scriptID();
				}
				break;
			case VALUETYPE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 110; Match(VALUETYPE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public CallContext call() {
			return GetRuleContext<CallContext>(0);
		}
		public BranchContext branch() {
			return GetRuleContext<BranchContext>(0);
		}
		public CondContext cond() {
			return GetRuleContext<CondContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 22, RULE_expression);
		try {
			State = 117;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 113; literal();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114; call();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 115; branch();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 116; cond();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(HS_Gen1Parser.INT, 0); }
		public ITerminalNode FLOAT() { return GetToken(HS_Gen1Parser.FLOAT, 0); }
		public ITerminalNode STRING() { return GetToken(HS_Gen1Parser.STRING, 0); }
		public ITerminalNode BOOLEAN() { return GetToken(HS_Gen1Parser.BOOLEAN, 0); }
		public ITerminalNode ID() { return GetToken(HS_Gen1Parser.ID, 0); }
		public ITerminalNode NONE() { return GetToken(HS_Gen1Parser.NONE, 0); }
		public ITerminalNode VALUETYPE() { return GetToken(HS_Gen1Parser.VALUETYPE, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.EnterLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHS_Gen1Listener typedListener = listener as IHS_Gen1Listener;
			if (typedListener != null) typedListener.ExitLiteral(this);
		}
	}

	[RuleVersion(0)]
	public LiteralContext literal() {
		LiteralContext _localctx = new LiteralContext(Context, State);
		EnterRule(_localctx, 24, RULE_literal);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << NONE) | (1L << VALUETYPE) | (1L << STRING) | (1L << FLOAT) | (1L << INT) | (1L << ID))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
